--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -47,6 +47,9 @@
 			class="far fa-address-book my-2"></i> View contacts</a> <a href="#"
 			id="add-link" th:href="@{/user/add-contact}" class="item"><i
 			class="fas fa-pencil-alt my-2"></i> Add contacts</a>
+			<a href=""
+			id="request-link" th:href="@{/user/request-contact/0}" class="item"><i
+			class="fas fa-cogs my-2"></i> Requests</a>
 		<!-- 	<a href="#" id="setting-link" class="item"><i class="fas fa-cogs"></i>  Deactivate</a> -->
 		<a href="#" id="logout-link" th:href="@{/logout}" class="item"><i
 			class="fas fa-sign-out-alt my-2"></i> Logout</a>
