updated with latest improvement

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -23,7 +23,7 @@
 	<!-- This is NavBar -->
 	<nav class="navbar navbar-expand-sm navbar-dark bg-primary sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Smart Contact Manager</a>
+			<a class="navbar-brand" href="#">CryptoContact</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
