--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>Smart Contact Manager</title>
+  <title>CryptoContact</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -201,7 +201,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Smart Contact Manager</a>
+      <a class="navbar-brand" href="#myPage">CRYPTOCONTACT</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -216,7 +216,7 @@
 
 
 <div class="jumbotron text-center">
-  <h1>Company</h1> 
+  <h1>CryptoContact</h1> 
   <p>We specialize in maintaining your contacts in very efficient and secure way.</p> 
 </div>
 
@@ -227,7 +227,7 @@
       <h2>About Page</h2><br>
       <h4>Data is said to be most Valuable things in the world.</h4><br>
       <p>We are committed to keep your contacts secure and maintain it in very efficient way.</p>
-      <br><a class="btn btn-default btn-lg" th:href="@{/signin}">Get in Touch</a>
+      <br><a class="btn btn-default btn-lg" th:href="@{/signin}">Sign In</a>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
@@ -258,7 +258,7 @@
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
       <h4>POWER</h4>
-      <p>Access your contacts anywhere</p>
+      <p>Access your contacts anywhere,anytime</p>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-heart logo-small"></span>
@@ -295,7 +295,7 @@
 <div id="portfolio" class="container-fluid text-center bg-grey">
   <h2>Explore</h2><br>
   <h4>Sign up to explore What we have created</h4>
-  <a th:href="@{/signup}" class="btn btn-block btn-primary ">Explore</a>  
+  <a th:href="@{/signup}" class="btn btn-block btn-primary ">Sign Up</a>  
 </div>
   
 <!-- Container (Contact Section) -->
