--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf,org" th:replace="base::layout(~{::section})">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
 <head>
 <meta charset="ISO-8859-1">
 <title th:text="${title}">Insert title here</title>
