--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -24,7 +24,7 @@
 	<!-- This is NavBar -->
 	<nav class="navbar navbar-expand-sm navbar-dark bg-primary sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Smart Contact Manager</a>
+			<a class="navbar-brand" href="#">CryptoContact</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -85,7 +85,6 @@
 	<script type="text/javascript" th:src="@{/JS/script.js}"></script>
 	<script>
 	function deleteContact(cid){
-		
 		swal({
 			  title: "Are you sure?",
 			  text: "Once deleted, you will not be able to recover this contact!",
