--- a/src/main/resources/templates/normal/update_form.html
+++ b/src/main/resources/templates/normal/update_form.html
@@ -15,7 +15,12 @@
 				<th:block th:text="${#session.removeAttribute('message')}"></th:block>
 			</div>
 
-			<div class="card-body">
+			<div th:unless="${contact}"
+				class="text-center pt-5 pb-5 font-weight-lighter display-5">
+				<span class="text-danger"><i
+					class="fas fa-exclamation-triangle"> Unauthorized Access Denied</i></span>
+			</div>
+			<div class="card-body" th:if="${contact}">
 				<h1 class="text-center">Update Contact</h1>
 				<div class="container-fluid mt-1">
 					<div class="row">
