--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -23,7 +23,7 @@
 								th:src="@{/img/contact.png}">
 						</div>
 						<h1 class="text-center text-dark">Register</h1>
-						<form novalidate="novalidate" action=""
+						<form action=""
 							th:action="@{/do_register}" method="post"
 							style="padding-left: 20px; padding-right: 20px;"
 							th:object="${user}">
@@ -33,7 +33,7 @@
 									type="text" name="name" class="form-control"
 									th:classappend="${#fields.hasErrors('name')? 'is-invalid' : ''}"
 									id="name_field" aria-describedby="emailHelp"
-									placeholder="Enter here" required th:value="${user.name}">
+									placeholder="Enter here" th:value="${user.name}">
 								<div class="invalid-feedback"
 									th:each="e : ${#fields.errors('name')}" th:text="${e}"></div>
 							</div>
@@ -43,7 +43,7 @@
 									type="email" name="email" class="form-control"
 									th:classappend="${#fields.hasErrors('email')? 'is-invalid' : ''}"
 									id="email_field" aria-describedby="emailHelp"
-									placeholder="Enter here" required="required"
+									placeholder="Enter here"
 									th:value="${user.email}">
 								<div class="invalid-feedback"
 									th:each="e : ${#fields.errors('email')}" th:text="${e}"></div>
@@ -55,7 +55,7 @@
 									class="form-control"
 									th:classappend="${#fields.hasErrors('password')? 'is-invalid' : ''}"
 									id="password_field" aria-describedby="emailHelp"
-									placeholder="Enter here" required="required">
+									placeholder="Enter here" >
 								<div class="invalid-feedback"
 									th:each="e : ${#fields.errors('password')}" th:text="${e}"></div>
 							</div>
@@ -69,16 +69,16 @@
 							</div>
 							<!-- Secret key  -->
 							<div class="form-group">
-								<label for="about_field" class="form-label">Secret key :
+								<label for="key_field" class="form-label">Secret key :
 									Remember this to decrypt your data</label> <input
-									 name="key" id="key_field"
+									 name="key" id="key_field" type="password"
 									class="form-control" placeholder="Enter key here ">
 							</div>
 							<!-- Terms and conditions -->
 							<div class="form-group form-check mt-2">
 								<input type="checkbox" name="agreement" class="form-check-input"
 									th:classappend="${#fields.hasErrors('enabled')? 'is-invalid' : ''}"
-									id="agreement"> <label for="agreement">Accept
+									id="agreement" checked="checked" disabled="disabled"> <label for="agreement">Accept
 									Terms and Conditions*</label>
 								<div class="invalid-feedback"
 									th:each="e : ${#fields.errors('enabled')}" th:text="${e}"></div>
